@@ -2,6 +2,10 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 8.1.23
 
+- CLI:
+  . Fixed bug GH-11716 (cli server crashes on SIGINT when compiled with
+    ZEND_RC_DEBUG=1). (nielsdos)
+
 - FFI:
   . Fix leaking definitions when using FFI::cdef()->new(...). (ilutov)
 
